[package]
name = "rest_client"
version = "0.1.0"
authors = ["Ian Costanzo <ian@anon-solutions.ca>"]

[dependencies]
native-tls = "0.1.4"
hyper = "0.11.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = "0.8.5"
# reqwest = { git = "https://github.com/ianco/reqwest" }
rand = "0.3"
time = "0.1.36"
